Added listing artists from the rest endpoint
Added FactoryGuy for testing models and mocking http calls
Updated tests to reflect now having data

--- a/app/templates/artist-list.hbs
+++ b/app/templates/artist-list.hbs
@@ -1,5 +1,7 @@
 <h2>Artists</h2>
 
 <ul class="artists">
-  <li>Hello world</li>
+  {{#each model key="id" as |artist|}}
+  <li>{{artist.name}}</li>
+  {{/each}}
 </ul>
