Adding a back link to the the artist pages

--- a/app/templates/artists/show.hbs
+++ b/app/templates/artists/show.hbs
@@ -5,3 +5,5 @@
   <li class="album">{{album.name}}</li>
   {{/each}}
 </ul>
+
+<div class="back-link">{{#link-to 'artist-list'}}Back to artists{{/link-to}}</div>
