Adding comments to album pages
Added a component for comment-lis
Added the comment model
Added additional comments to the seed file/updated the existing comment
seeds to be legal
Updated the album to have comments

--- a/app/templates/albums/show.hbs
+++ b/app/templates/albums/show.hbs
@@ -1,4 +1,10 @@
 
 <h2 class="album-name">{{model.name}}</h2>
 
+<ul class="comments">
+  {{#each model.comments key="id" as |comment|}}
+  {{comment-li comment=comment}}
+  {{/each}}
+</ul>
+
 <div class="back-link">{{#link-to 'artists.show' model.artist}}Back to Artist{{/link-to}}</div>
